fixed contact page spacing

--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@ hr {
 
 #contact p {
   font-size: 20px;
-  width: 50%;
+  /* width: 50%; */
   text-align: center;
   margin: 0 auto;
 }
